test/mutation_analysis/s0065_valid_number/hafis/starchat/mutants/10/result.txt
./test/mutation_analysis/s0065_valid_number/hafis/starchat/mutants/10/Solution.java:20: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
